Fix alignment of v on football fixtures table (Andorid 4.4+)

--- a/ArticleTemplates/css/scss/templates/_football.scss
+++ b/ArticleTemplates/css/scss/templates/_football.scss
@@ -628,8 +628,10 @@
 				.football-match-score {
 					color: $standfirst;
 					text-align: center;
+					overflow: hidden;
 				}
-				.football-match-home, .football-match-away {
+				.football-match-home,
+				.football-match-away {
 					white-space: nowrap;
 					overflow: hidden;
 					text-overflow: ellipsis;
