--- a/ArticleTemplates/css/style.css
+++ b/ArticleTemplates/css/style.css
@@ -7452,8 +7452,10 @@ aside {
       color: #999999; }
     #football .football-tabs-stats .football-fixtures .football-match .football-match-score {
       color: #676767;
-      text-align: center; }
-    #football .football-tabs-stats .football-fixtures .football-match .football-match-home, #football .football-tabs-stats .football-fixtures .football-match .football-match-away {
+      text-align: center;
+      overflow: hidden; }
+    #football .football-tabs-stats .football-fixtures .football-match .football-match-home,
+    #football .football-tabs-stats .football-fixtures .football-match .football-match-away {
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis; }
